--- a/Lab4/app/src/main/res/layout/activity_main.xml
+++ b/Lab4/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity" >
 
     <!-- Our drawing area-->
-    <com.example.anders.drawingapp.DrawingView
+    <com.example.anders.drawingapp.GameView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/drawing"
